# pgi-docgen

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  404.html  README.rst  pyproject.toml  setup.cfg
docker/: Dockerfile  build-docs.sh  build-image.sh  run.sh
docker-gtk4/: Dockerfile  build-docs.sh  build-image.sh
docs/: config.html  searchindex.js  sidebar.html
docs/Adw-1/: callbacks.html  class-structs.html  classes.html  constants.html  enums.html  flags.html  functions.html  hierarchy.html  iface-structs.html  index.html  interfaces.html  mapping.html  objects.inv  searchindex.js  structs.html
docs/GLib-2.0/: callbacks.html  classes.html  constants.html  enums.html  flags.html  functions.html  index.html  mapping.html  objects.inv  searchindex.js  structs.html  unions.html
docs/GModule-2.0/: callbacks.html  enums.html  flags.html  functions.html  index.html  mapping.html  objects.inv  searchindex.js  structs.html
docs/GObject-2.0/: callbacks.html  class-structs.html  classes.html  constants.html  enums.html  flags.html  functions.html  hierarchy.html  index.html  interfaces.html  mapping.html  objects.inv  searchindex.js  structs.html  unions.html
docs/Gdk-4.0/: callbacks.html  class-structs.html  classes.html  constants.html  enums.html  flags.html  functions.html  hierarchy.html  iface-structs.html  index.html  interfaces.html  mapping.html  objects.inv  searchindex.js  structs.html
docs/GdkPixbuf-2.0/: callbacks.html  class-structs.html  classes.html  constants.html  enums.html  flags.html  functions.html  hierarchy.html  index.html  mapping.html  objects.inv  searchindex.js  structs.html
docs/Gio-2.0/: callbacks.html  class-structs.html  classes.html  constants.html  enums.html  flags.html  functions.html  (+8 more)
pgidocgen/: __init__.py  __main__.py  build.py  create.py  docbook_escape.py  docobj.py  funcsig.py  gtkdoc.py  main.py  mergeindex.py  namespace.py  overrides.py  parser.py  repo.py  rstutil.py  stubs.py  util.py
tests/: conftest.py  test_docbook_escape.py  test_docstrings.py  test_funcsig.py  test_girdata.py  test_gtkdoc.py  test_namespace.py  test_repo.py  test_util.py
(+1351 files in other folders)
