[metadata]
name=pgi-docgen
version=0.0.1
description=Docs Generator for PGI/PyGObject
author=Christoph Reiter
author_email=reiter.christoph@gmail.com
url=https://github.com/pygobject/pgi-docgen
license=LGPL-2.1+

[options]
zip_safe = false
install_requires =
    pgi @ git+https://gitlab.gnome.org/msandova/pgi.git
    requests==2.28.0
    sphinx==5.0.2
    cairocffi==1.3.0
    beautifulsoup4==4.11.1
    lxml==4.9.0
python_requires = >=3.8
packages = find:
scripts=
    pgi-docgen

[options.extras_require]
test =
    pytest
    flake8
    coverage
    pytest-cov

[flake8]
ignore=E501,E741,E402,E126,W504
builtins=unicode
exclude=_docs,pgi
